# libbuildgen

./: CMakeLists.txt  README.md
include/: buildgen.h  macros.h  stringarray.h
src/: main.c  stringarray.c
tests/: build.c
